Prevent images from jumping on photo pages

--- a/themes/paulhayes.photography/source/css/master.css
+++ b/themes/paulhayes.photography/source/css/master.css
@@ -378,6 +378,7 @@ a:active {
 
 .photo-image-wrapper {
   margin: 0 -40px;
+  min-height: 300px;
 }
 
 .photo-meta {
